# raptor

./: .gitignore  CNAME  README.md  index.html  params.json  readme.txt  workspace.rosinstall
data/: .gitignore  Makefile  demo-office.config.template  mainpage.dox  manifest.xml  newObject2.ppm  runDemo.sh
data_original/: #newexamples.conf#  model.ffld.txt  newObject3.ppm  newexamples.cfg  newexamples.conf  runDemo-original.sh
ffld/: CMakeLists.txt  Model.h  ffld.cpp  package.xml  timingtools.h
ffld/data/office/: n02834778_final.mat  n02840245_final.mat  n02840619_final.mat  n02871439_final.mat  n03793489_final.mat
ffld/data/office/24-objects/: plate1_final.mat  pringles_final.mat
ffld/data/office/24-objects/finals/: clock1_final.mat  clock2_final.mat
ffld/data/toyota/: G_gatorade_final.mat  kleenex_final.mat  pringles_final.mat  toilet_paper_final.mat
ffld/include/ffld/: DPMDetection.h  HOGPyramid.h  Intersector.h  JPEGImage.h  Mixture.h  Model.h  Object.h  Patchwork.h  Scene.h  opencvToJPEGImage.h
ffld/office/: n03085219_final.mat  n03642806_final.mat  n04004767_final.mat  n04118776_final.mat  n04380533_final.mat
ffld/office/24-objects/: teabox_final.mat
ffld/office/24-objects/finals/: colgate_final.mat
ffld/outoffice/: model.ffld.2components.txt  model.ffld.txt
ffld/src/: DPMDetection.cpp  HOGPyramid.cpp  JPEGImage.cpp  Mixture.cpp  Model.cpp  Object.cpp  Patchwork.cpp  Rectangle.cpp  Scene.cpp  detect.cpp  detect_opencv.cpp  ffld.cpp
ffld/toyota/: cup_or_mug_final.mat  minute_maid_final.mat  shaving_cream_final.mat  white_magic_final.mat
ffld_ros/: .gitignore  Makefile  manifest.xml
ffld_ros/ffld/: HOGPyramid.h  kleenex
ffld_ros/ffld/office/: n03179910_final.mat  n03337140_final.mat  n03691459_final.mat  n03797390_final.mat  n04009552_final.mat  n04557648_final.mat
ffld_ros/ffld/office/24-objects/: bowl1_final.mat  bowl3_final.mat  papertowel_final.mat
ffld_ros/ffld/office/24-objects/finals/: bowl2_final.mat  magicwhite_final.mat
ffld_ros/ffld/toyota/: bottle_final.mat  clipboard_final.mat  crystal_geyser_final.mat  tea_box_final.mat
raptor/: CMakeLists.txt  demo-office.config  mainpage.dox  manifest.xml  models.txt  newexamples.cfg  package.xml
raptor/cfg/: .gitignore  config.cfg
raptor/docs/: ParametersConfig.dox  ParametersConfig.wikidoc
raptor/launch/: detection.launch  monitor.launch  usb_cam.launch
raptor/src/: .gitignore  transfer_images.cpp  transfer_images_ffld.cpp  transfer_images_torecord.cpp
raptor/src/kinect/srv/: _FEP.py  _TrainDeepFeatureModel.py
raptor/src/raptor/srv/: __init__.py
ros_workspace/bosch_drivers/: rosdep.yaml  stack.xml
ros_workspace/bosch_drivers/usb_cam/.svn/: all-wcprops  entries
ros_workspace/bosch_drivers/usb_cam/include/.svn/: all-wcprops  entries
ros_workspace/bosch_drivers/usb_cam/include/usb_cam/.svn/: all-wcprops  dir-prop-base  entries
ros_workspace/bosch_drivers/usb_cam/src/.svn/: all-wcprops  entries
ros_workspace/bosch_drivers/usb_cam/src/libusb_cam/.svn/: all-wcprops  entries
ros_workspace/bosch_drivers/usb_cam/src/usb_cam_node/: usb_cam_node.cpp
ros_workspace/bosch_drivers/usb_cam/src/usb_cam_node/.svn/: all-wcprops  entries
ros_workspace/data/: demo-office.config.template~  model.mat  newObject.ppm  newObject0.ppm  newObject1.ppm  newObject4.ppm  newexamples.conf~  runDemo-justfordebugging.sh  runDemo.sh~  wisdom.fftw
ros_workspace/ffld/: #detect_opencv.cpp#  DPMDetection.h  JPEGImage.cpp  Mixture.cpp  Mixture.h  Model.cpp  Scene.cpp  Scene.h  convert_models_to_office.m  convert_models_to_office.m~  convert_models_to_toyota.m  detect_opencv.cpp  opencvToJPEGImage.h  wisdom.fftw
ros_workspace/ffld/office/: n02747177_final.mat  n02769748_final.mat  n02992529_final.mat  n03001627_final.mat  n03085013_final.mat  n03127747_final.mat  n03180011_final.mat  n03261776_final.mat  n03483823_final.mat  n03906997_final.mat  n04148054_final.mat
ros_workspace/ffld/office/24-objects/: book2_final.mat  cokecan_final.mat  greenworks_final.mat  minutemaid_final.mat  mug2_final.mat  pastabox_final.mat  vitaminwater_final.mat
ros_workspace/ffld/office/24-objects/finals/: book1_final.mat  mug1_final.mat  pan_final.mat  plate2_final.mat  tropicalgarden_final.mat  tupperware_final.mat
ros_workspace/ffld/outoffice/: model.ffld.adapt.txt  model.ffld.imagenet.txt  model.ffld.new.txt  n03797390_final  n04380533_final
ros_workspace/ffld/toyota/: Walgreens_orange_soda_final.mat  binder_or_magazine_box_final.mat  bowl_final.mat  clock_final.mat  coca_cola_final.mat  expo2_final.mat  expo_final.mat  green_works_final.mat  listerine_final.mat  pasta_box_final.mat  plate_final.mat  scissors_final.mat  soap_bottle_final.mat  soft_scrub_final.mat  spray_bottle_final.mat  tupperware_final.mat  vitamin_water_final.mat  wipes_final.mat
ros_workspace/raptor/: CMakeLists.txt  demo-office.config  demo-office.config~  recordImage.sh
ros_workspace/raptor/cfg/: config.cfgc
ros_workspace/raptor/cfg/cpp/kinect/: ParametersConfig.h
ros_workspace/raptor/docs/: ParametersConfig-usage.dox
ros_workspace/raptor/launch/: monitor.launch  train_model.launch
ros_workspace/raptor/src/: transfer_images.cpp  transfer_images_ffld.cpp~  transfer_images_torecord.cpp~
ros_workspace/raptor/src/kinect/cfg/: ParametersConfig.py
ros_workspace/raptor/src/kinect/srv/: _ClassifyImageCudaDPM.py
ros_workspace/raptor/src/raptor/srv/: _ClassifyImageCudaDPM.py  _FEP.py  _TrainDeepFeatureModel.py
stylesheets/: stylesheet.css
