<?xml version="1.0"?>
<package>
  <name>ffld</name>
  <version>0.0.0</version>
  <description>The ffld package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nah@todo.todo">nah</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ffld_ros</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>

  <build_depend>eigen</build_depend>
  <run_depend>eigen</run_depend>

  <build_depend>libjpeg</build_depend>
  <run_depend>libjpeg</run_depend>

  <build_depend>libfftw3</build_depend>
  <run_depend>libfftw3</run_depend>

  <build_depend>libxml2</build_depend>
  <run_depend>libxml2</run_depend>

</package>